Closed Bug 1878029 Opened 1 year ago Closed 1 year ago

PiP window can no longer be moved by dragging

Categories

(Core :: Widget: Gtk, defect)

Firefox 124
Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
124 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox122 --- unaffected
firefox123 --- unaffected
firefox124 --- verified
firefox125 --- verified

People

(Reporter: ke5trel, Assigned: stransky)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

STR:

  1. Open a video in Picture-in-Picture on Ubuntu 23.10.
  2. Click and drag the PiP window to reposition it.

PiP window does not respond to click and drag action.

Workaround is to right-click > Move.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=b4429209f9f830e679e575019e34e24abe673855&tochange=381f7d17a53e35572f6c5a461434caafd56b6323

Regressed by Bug 1539998.

:stransky, since you are the author of the regressor, bug 1539998, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(stransky)
Assignee: nobody → stransky
Status: NEW → ASSIGNED
Flags: needinfo?(stransky)
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/0899708984b2 [Linux] Process mouse button events regardless of system titlebar state r=emilio
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch
Flags: qe-verify+

I was able to reproduce the issue on Ubuntu 23.10 using Firefox build 124.0a1(2024-02-01).
Verified as fixed on Ubuntu 23.10 /Win10x64 / Mac 12.6 using Firefox builds 124.0b5 and 125.0a1.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: