Bug 1878029 [Linux] Process mouse button events regardless of system titlebar state r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D200438